Added get method
