# internal/controller/v1/response/humans.go
@@ -1,0 +1,7 @@
+package response
+
+import "github.com/P1xart/effective_mobile_service/internal/entity"
+
+type GetAllHumans struct {
+	Humans []entity.Human `json:"humans"`
+}
